# TRMeshGD

./: .clang-tidy  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: CompilerWarnings.cmake
res/: TRMesh.gdextension
src/: RegisterExtension.cpp
